--- a/student_mysql.ipynb
+++ b/student_mysql.ipynb
@@ -509,6 +509,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tkinter as tk\n",
+    "from tkinter import *\n",
+    "from tkinter import ttk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "enter=input(\"Admin or teacher :\")\n",
     "if enter==\"Admin\" or enter==\"admin\" or enter==\"ADMIN\":\n",
     "    print(\"1.To view all the student details\")\n",
